--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ django-stubs = "^5.1.0"
 psycopg2-binary = "^2.9.10"
 pillow = "^11.0.0"
 python-dotenv = "^1.0.1"
+django-filter = "^24.3"
 
 
 [build-system]
