--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2-binary = "^2.9.10"
 pillow = "^11.0.0"
 python-dotenv = "^1.0.1"
 django-filter = "^24.3"
+djangorestframework-simplejwt = "^5.3.1"
+ipython = "^8.29.0"
 
 
 [build-system]
