--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.1"
 django-filter = "^24.3"
 djangorestframework-simplejwt = "^5.3.1"
 ipython = "^8.29.0"
+coverage = "^7.6.4"
 
 
 [build-system]
