--- a/.gitignore
+++ b/.gitignore
@@ -37,12 +37,12 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit test / .coverage reports
 htmlcov/
 .tox/
 .nox/
-.coverage
-.coverage.*
+
+
 .cache
 nosetests.xml
 coverage.xml
