add api documentation and payment with strip service

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ django-filter = "^24.3"
 djangorestframework-simplejwt = "^5.3.1"
 ipython = "^8.29.0"
 coverage = "^7.6.4"
+drf-yasg = "^1.21.8"
+django-cors-headers = "^4.6.0"
+requests = "^2.32.3"
+stripe = "^11.2.0"
+forex-python = "^1.8"
 
 
 [build-system]
