--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ django-cors-headers = "^4.6.0"
 requests = "^2.32.3"
 stripe = "^11.2.0"
 forex-python = "^1.8"
+redis = "^5.2.0"
+celery = "^5.4.0"
+django-celery-beat = "^2.7.0"
 
 
 [build-system]
